@@ -1,3 +1,7 @@
+2011-09-14   Jeremy Cribb <jcribb@email.unc.edu>
+	* sim_newt_steps.m:  added.  creates a matrix of displacements over a particular sampling and time scale as defined by the user.  To generate a random walk sample path, just cumulatively add the steps generated by sim_newt_steps.  This became necessary because the steps themselves are used in modeling where deterministic AND stochastic forces operate on a moving object.
+	* sim_newt_fluid.m:  now uses sim_newt_steps.m.
+
 2011-08-25   Jeremy Cribb <jcribb@email.unc.edu>
 	* sim_video_diff_expt.m:  switched from initial evt format to vrpn.mat format to better simiulate initial conditions.
 
